tests/endtoend/failure/expected/error_expressions4d.compile.out
error_expressions4d.silly:1:14: error: parse error: mismatched input 'EQ' expecting ';'
    1 | PRINT 1 EQ 2 EQ 3;
      |              ^
